<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_bg"
                tools:context="com.example.oladapo.groupapp.activities.LoginActivity">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="38dp"
                android:layout_marginTop="75dp"
                android:src="@drawable/xeebit_logo" />

            <TextView
                android:id="@+id/prompt"
                style="@style/TextAppearanceGray.SmallPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signin_description"
                />

            <TextView
                android:id="@+id/error"
                style="@style/TextAppearanceRed.SmallPlus"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signin_invalid_description"
                android:textColor="@color/error"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/form_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        style="@style/TextAppearanceGray.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/signin_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:singleLine="true"
                        android:textColorHint="#999999"
                        android:textCursorDrawable="@drawable/blinker" />

                    <EditText
                        android:id="@+id/password"
                        style="@style/TextAppearanceGray.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/signin_password_hint"
                        android:imeActionId="@integer/customImeActionId"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:singleLine="true"
                        android:textColorHint="#999999"
                        android:textCursorDrawable="@drawable/blinker" />
                </LinearLayout>

                <View
                    android:id="@+id/error_box"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:background="@drawable/error_box"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/TextAppearanceWhite.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_blue_rounded"
                android:text="@string/signin_button_label"
                android:textAllCaps="true"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/email_forgot_password"
                style="@style/TextAppearanceBlue.Small"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/signin_forgot_password_label"
                android:textAllCaps="true"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- Login progress -->
        <FrameLayout
            android:id="@+id/login_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                style="@style/ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </RelativeLayout>

